refactor: simplify engine and NNUE training code
- reduce duplicated board, move, opening, and Lichess logic
- simplify NNUE forward pass, gradients, and optimizer handling
- remove dead training code and obsolete documentation
- add board, perft, search, and weight-copy regression tests
- format all Java sources with google-java-format